treasure-map/src/SASS/Actions.sass
.actions
    width: 100%
    display: flex
    flex-direction: row
    justify-content: space-between
    align-items: flex-end
    div
        display: flex
        flex-direction: column
        justify-content: center
        align-items: center
        width: 15%
        z-index: 1
        form
            display: none
        .open
            display: flex
            justify-content: center
            align-items: center
            width: 100%
            background-color: gold
            border: 2px solid black
            padding-top: 20px
            h4
                width: 35%
                text-align: center
                self-align: center
                color: black
                margin: 5px 0
                border-bottom: 2px dashed transparent

            h4:hover
                cursor: pointer
                border-bottom: 2px dashed black
            h5
                margin: 10px

            select
                font-size: 1rem
                width: 80%

            input
                width: 80%
                font-size: 1rem
                margin: 5px 0

        .isle-buttons
            margin: 0
            width: 100%
            font-size: 1.5rem
            border: 2px solid black
        .isle-buttons:hover
            animation: none

